--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,7 @@ body{
 .wrapper .preview-img{
     display: flex;
     flex-grow: 1;
+    overflow: hidden;
     align-items: center;
     justify-content: center;
     margin-left: 20px;
